Small styling change due to gap in home page pictures on Chrome not correct.

--- a/css/index.css
+++ b/css/index.css
@@ -1540,7 +1540,7 @@ video {
   .article-wrapper:first-child,
   .article-wrapper:last-child,
   .article-wrapper:nth-child(2) {
-    margin: 2rem 0 0;
+    margin: 0 0.25rem 0;
   }
 
   .article-container,
